# ollama-image-mcp

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
server/: main.py
src/server/: main.py
